Fixed visibility in apartments list, add message for apartment already sponsored

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,3 +21,8 @@
 .ms_pb_4 {
     padding-bottom: 2.2rem !important;
 }
+
+.ms_invisible {
+    color: #cecece80;
+    background-color: #489fb5;
+}
